# zhuli

./: .gitignore  Cargo.toml  README.md  aiken.toml  plutus.json
cli/: .gitignore  Cargo.toml  README.md
cli/src/: cardano.rs  contract.rs  main.rs  pallas_extra.rs
cli/src/cmd/: delegate.rs  mod.rs  revoke.rs  vote.rs
lib/aiken/collection/list/: extra.ak  extra.test.ak
lib/aiken/fuzz/: scenario.ak
lib/cardano/: generator.ak
lib/cardano/credential/: proxy.ak  proxy.test.ak
lib/cardano/credential/proxy/: state.ak
lib/zhuli/: predicate.ak  predicate.test.ak  state.ak  state.test.ak
validators/: proxy.ak  proxy.test.ak  zhuli.ak  zhuli.test.ak
