[workspace]
members = ["cli"]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc"
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# Cargo-dist uses ubuntu-20.04 by default, causing issues in various cases
# because it links with openssl-1.1 whereas recent distro ships with 3.x
[workspace.metadata.dist.github-custom-runners]
x86_64-unknown-linux-gnu = "ubuntu-22.04"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
