[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32 = "0.11.0"
blockfrost = "1.0.1"
blockfrost-openapi = "0.0.3"
clap = "4.5.17"
hex = "0.4.3"
indoc = "2.0.5"
pallas-addresses = "0.30.2"
pallas-codec = "0.30.2"
pallas-crypto = "0.30.2"
pallas-primitives = "0.30.2"
pallas-txbuilder = "0.30.2"
tokio = { version = "1.40.0", features = ["full"] }
uplc = "1.1.2"
