[package]
name = "zhuli"
description = "A companion command-line tool for managing a hot/cold DRep setup."
version = "0.0.2"
edition = "2021"
repository = "https://github.com/CardanoSolutions/zhuli"
homepage = "https://github.com/CardanoSolutions/zhuli"
authors = ["KtorZ <matthias.benkort@gmail.com>"]
license = "MPL-2.0"

[dependencies]
bech32 = "0.11.0"
blockfrost = "1.0.1"
blockfrost-openapi = "0.0.3"
clap = { version = "4.5.17", features = ["cargo"] }
color-print = "0.3.6"
hex = "0.4.3"
indoc = "2.0.5"
pallas-addresses = "0.30.2"
pallas-codec = "0.30.2"
pallas-crypto = "0.30.2"
pallas-primitives = "0.30.2"
pallas-txbuilder = "0.30.2"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uplc = "1.1.2"
